--- a/index3.html
+++ b/index3.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Cordel Moderno</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     
             <header>
-                    Cordel Moderno
-                    Por <a href="https://www.recantodasletras.com.br/poesias/3186743"
-                        target="_blank">Milton Duarte</a>
-                    
+                    <p>
+                        <h1>Cordel Moderno</h1>
+                        Por <a href="https://www.recantodasletras.com.br/poesias/3186743"
+                            target="_blank">Milton Duarte</a>
+                    </p>
             </header>
 
-    <section>
+    <section class="normal">
         <p>
-            E stou ficando cansado <br>
+            Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail<br>
             Mensagem curta e fria<br>
@@ -26,7 +28,7 @@
             Vou dizer tudo em poesia.
         </p>
     </section>
-    <section>
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado<br>
@@ -37,7 +39,7 @@
             E um coração desenhado.
         </p>
     </section>
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço<br>
@@ -57,7 +59,7 @@
             Decifre esse rabisco.
         </p>
     </section>
-    <section>
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão<br>
@@ -68,7 +70,7 @@
             Nas linhas do coração.
         </p>
     </section>
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
@@ -76,8 +78,8 @@
             A pessoa foi embora<br>
             Abriu outro aplicativo<br>
             O mundo ficou cativo<br>
-            Da tecnologia do agora.<br>
-            Felizmente, pra orar<br>
+            Da tecnologia do agora.<br></p>
+         <p>Felizmente, pra orar<br>
             Não precisa de internet<br>
             Deus escuta todo mundo<br>
             Se quiser, faça esse teste<br>
@@ -87,8 +89,10 @@
         </p>
     </section>
        <footer>
-        Site criado por um <a href="https://github.com/Igor-monteiro-barreto"target="_blank">aluno</a> 
-        do <a href="https://gustavoguanabara.github.io"target="_blank">Gustavo Guanabara</a>  
+        <p>
+            Site criado por um <a href="https://github.com/Igor-monteiro-barreto"target="_blank">aluno</a>
+            do <a href="https://gustavoguanabara.github.io"target="_blank">Gustavo Guanabara</a>
+        </p> 
        </footer>
 </body>
 </html>
